Fix: 녹차 버튼 사이즈를 70pt로 수정
가독성 개선

--- a/templates/menu.html
+++ b/templates/menu.html
@@ -8,6 +8,6 @@
     <h1>메뉴 페이지</h1>
     <button>커피</button>
     <button>디저트</button>
-    <button>음료</button>
+    <button style="font-size:70pt;">녹차</button>
 </body>
 </html>
