--- a/templates/menu.html
+++ b/templates/menu.html
@@ -5,9 +5,14 @@
     <title>메뉴</title>
 </head>
 <body>
-    <h1>메뉴 페이지</h1>
-    <button>커피</button>
-    <button>디저트</button>
-    <button style="font-size:70pt;">녹차</button>
+    <center>
+        메뉴판
+        <p>
+            <button name="menu1" style="width:70pt;">아메리카노</button><br>
+            <button name="menu2" style="width:70pt;">카페라떼</button><br>
+            <button name="menu2" style="width:70pt;">녹차</button><br>
+            <button name="menu2" style="width:70pt;">둥글레차</button><br>
+        </p>
+    </center>
 </body>
 </html>
